UI: Fix oversized code blocks in paragraphs spilling over
They encroach on the lines above and below in this case, and it looks quite bad. Reducing the size makes them fit better, and also plays into the style of the custom dark theme (personal opinion).

--- a/src/css/color-theme-dark.css
+++ b/src/css/color-theme-dark.css
@@ -54,4 +54,6 @@ a:hover {
 code {
   color: var(--background-color-darkpurple);
   border-radius: 0;
+  font-size: 85%;
+  border: none;
 }
